--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+/node_modules
+/vendor/assets/stylesheets/brunch
+/vendor/assets/javascripts/brunch
