--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "auto-reload-brunch": "^2.0.0",
     "brunch": "^2.5.1",
-    "javascript-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
-    "auto-reload-brunch": "^2.0.0"
+    "javascript-brunch": "^2.0.0",
+    "sass-brunch": "^2.7.0",
+    "uikit": "^2.27.2"
   }
 }
