--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
     "brunch": "^2.5.1",
+    "copycat-brunch": "^1.1.0",
     "css-brunch": "^2.0.0",
     "javascript-brunch": "^2.0.0",
     "sass-brunch": "^2.7.0",
