--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
-env:
-  - TRAVIS_NODE_VERSION="4"
 before_install:
+  - nvm install stable
+  - nvm use stable
   - npm install -g yarn
 before_script:
   - bundle exec rake assets:precompile
