--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - nvm use stable
   - npm install -g yarn
 before_script:
-  # - bundle exec rake assets:precompile
-  - rm -f db/test.db
+  - rake assets:precompile
+  - rm -f db/test.sqlite3
   - RAILS_ENV=test rails db:create
 script: bundle exec rails test
