--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
 before_script:
   - rake assets:precompile
   - rm -f db/test.sqlite3
-  - RAILS_ENV=test rails db:create
+  - RAILS_ENV=test bundle exec rails db:create
 script: bundle exec rails test
