--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - nvm use stable
   - npm install -g yarn
 before_script:
-  - rails assets:precompile
+  - bundle exec rails assets:precompile
   - rm -f db/test.sqlite3
   - RAILS_ENV=test bundle exec rails db:create
 script: bundle exec rails test
