--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
   - nvm use stable
   - npm install -g yarn
 before_script:
+  - bundle exec rails --version
   - bundle exec rails assets:precompile
   - rm -f db/test.sqlite3
   - RAILS_ENV=test bundle exec rails db:create
