--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ before_script:
   - bundle exec rails assets:precompile
   - rm -f db/test.sqlite3
   - RAILS_ENV=test bundle exec rails db:create
+  - RAILS_ENV=test bundle exec rails db:load:schema
 script: bundle exec rails test
