--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ before_script:
   - rm -f db/test.sqlite3
   - RAILS_ENV=test bundle exec rails db:create
   - RAILS_ENV=test bundle exec rails db:schema:load
+  - RAILS_ENV=test bundle exec rails db:migrate
 script: bundle exec rails test
