--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_script:
   - bundle exec rails assets:precompile
   - rm -f db/test.sqlite3
   - RAILS_ENV=test bundle exec rails db:create
-  - RAILS_ENV=test bundle exec rails db:schema:load
+  # - RAILS_ENV=test bundle exec rails db:schema:load
   - RAILS_ENV=test bundle exec rails db:migrate
 script: bundle exec rails test
