--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-timeline": "^1.0.1",
     "jquery": "^3.1.1",
     "jquery-ujs": "^1.2.2",
+    "phantomas": "^1.19.0",
     "sass-brunch": "^2.10.4",
     "typescript-brunch": "^2.2.0",
     "uikit": "^2.27.2"
